[package]
name = "spikenaut-backend"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "TraderBackend trait and implementations for SNN signal processing: RustBackend (native), ZmqBrainBackend (Julia IPC), NeroManifoldSnapshot packet parsing"
keywords = ["snn", "backend", "zmq", "neuromorphic", "spikenaut"]
categories = ["science", "network-programming", "hardware-support"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zmq = { version = "0.10", optional = true }

[features]
default = []
zmq = ["dep:zmq"]
